fixed SNR toggle config name and description (xml) (cherry picked from commit ccc9a74fbfc2a2fcc2d5eb9276cffa1f3aa443bc) Thanks to @WanWizard

--- a/po/bg.po
+++ b/po/bg.po
@@ -1839,11 +1839,11 @@ msgstr ""
 msgid "Bus: "
 msgstr ""
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ако е зададено на Да, всички места, където SNR се показва в dB, ще показват SNR процент и обратно."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -10939,14 +10939,8 @@ msgstr "Покажи Инфо"
 msgid "Show PiP"
 msgstr "Покажи Инфо"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Показвай SNR в проценти вместо в dB"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
