--- a/po/da.po
+++ b/po/da.po
@@ -2117,11 +2117,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Hvis indstillet til Ja, vil alle steder, hvor SNR i dB vises, vise SNR-procenten og omvendt."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -12832,14 +12832,8 @@ msgstr "Vis info"
 msgid "Show PiP"
 msgstr "vis EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Vis SNR procent i stedet for dB værdi"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
