--- a/po/el.po
+++ b/po/el.po
@@ -1866,8 +1866,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Από προεπιλογή, το SNR θα εμφανίζεται σε dB (αν υποστηρίζεται από το tuner). Αυτή η ρύθμιση αναγκάζει το SNR να εμφανίζεται ως ποσοστό."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Εάν οριστεί σε Ναι, όλα τα μέρη όπου εμφανίζεται το SNR σε dB θα εμφανίζουν το ποσοστό SNR και αντίστροφα."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11198,7 +11198,7 @@ msgstr "Εμφάνιση πληροφοριών"
 msgid "Show PiP"
 msgstr "Εμφάνιση EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Εμφάνιση τιμής SNR σε ποσοστό αντί για dB"
 
 msgid "Show Script completed message"
