--- a/po/en.po
+++ b/po/en.po
@@ -1717,11 +1717,11 @@ msgstr ""
 msgid "Bus: "
 msgstr ""
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -10157,14 +10157,8 @@ msgstr ""
 msgid "Show PiP"
 msgstr ""
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Toggle the SNR values displayed"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
