--- a/po/et.po
+++ b/po/et.po
@@ -1872,11 +1872,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Siin: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Vaikimisi näidatakse SNR väärtust dB-s (kui tuuner seda toetab). Siin valikus saab muuta SNR näidu protsentideks."
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Kui see on seatud väärtusele Jah, kuvatakse kõigis kohtades, kus kuvatakse SNR-i dB-des, SNR protsenti ja vastupidi."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -11155,7 +11155,7 @@ msgstr "Näita infot"
 msgid "Show PiP"
 msgstr "näita saatekava..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Näita dB asemel SNR protsente"
 
 msgid "Show Script completed message"
