--- a/po/fy.po
+++ b/po/fy.po
@@ -2109,8 +2109,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "As ynsteld op Ja, sille alle plakken wêr't de SNR yn dB wurdt werjûn it SNR-persintaazje werjaan en oarsom."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12698,7 +12698,7 @@ msgstr "Ynformaasje sjen litte"
 msgid "Show PiP"
 msgstr "EPG sjen litte..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
