--- a/po/gl.po
+++ b/po/gl.po
@@ -2022,8 +2022,8 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "De forma predeterminada, SNR amósase en dB (cando o sintonizador o permite). En cambio, este parámetro forza ao SNR a aparecer coma unha porcentaxe."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Se se define como Si, todos os lugares onde se mostra a SNR en dB mostrarán a porcentaxe de SNR e viceversa."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11989,7 +11989,7 @@ msgstr "Amosar información"
 msgid "Show PiP"
 msgstr "Amosar PIP"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Amosar a porcentaxe de SNR en vez do valor de dB"
 
 msgid "Show Script completed message"
