--- a/po/it.po
+++ b/po/it.po
@@ -2005,8 +2005,8 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Per impostazione predefinita, SNR sarà mostrato in dB (quando supportato dal sintonizzatore). Questa impostazione forza il SNR ad essere mostrato invece come percentuale."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Se impostato su Sì, tutti i punti in cui viene visualizzato l'SNR in dB visualizzeranno la percentuale SNR e viceversa."
 
 msgid "By teamblue Image Team"
 msgstr "Di teamblue Image Team"
@@ -11863,14 +11863,8 @@ msgstr "Mostra i Log"
 msgid "Show PiP"
 msgstr "Mostra PiP"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Mostrare la percentuale SNR anzichè il valore in dB"
-
-msgid "Show Script completed message"
-msgstr "Mostra il messaggio Script completato"
-
-msgid "Show Task's completed message"
-msgstr "Mostra il messaggio di completamento dell'attività"
+msgid "Toggle the SNR values displayed"
+msgstr "Mostrare l'SNR come valore percentuale invece che in dB"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
