--- a/po/lt.po
+++ b/po/lt.po
@@ -1885,11 +1885,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Jei nustatyta į Taip, visose vietose, kur rodomas SNR dB, bus rodomas SNR procentas ir atvirkščiai."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -11285,14 +11285,8 @@ msgstr "Rodyti informaciją"
 msgid "Show PiP"
 msgstr "rodyti EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Vietoje dB rodyti SNR procentus"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
