--- a/po/lv.po
+++ b/po/lv.po
@@ -1892,8 +1892,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Kopne: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Pēc noklusējuma SNR tiek attēlots dB (ja atļauj uztvērējs). Šis iestatījums ieslēgs SNR attēlošanu procentos."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ja iestatīts uz Jā, visās vietās, kur tiek rādīts SNR dB, tiks rādīts SNR procents un otrādi."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11210,7 +11210,7 @@ msgstr "Rādīt informāciju"
 msgid "Show PiP"
 msgstr "Rādīt EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Rādīt SNR procentos dB vietā"
 
 msgid "Show Script completed message"
