--- a/po/mk.po
+++ b/po/mk.po
@@ -1813,8 +1813,8 @@ msgstr "Бурунди"
 msgid "Bus: "
 msgstr "Бус: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Стандардно, SNR се прикажува во децибели (ако е поддржано од тјунерот). Оваа опција го принудува SNR да биде прикажан како процент."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ако е поставено на Да, сите места каде што се прикажува SNR во dB ќе го прикажат процентот на SNR и обратно."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -10769,7 +10769,7 @@ msgstr "Покажи инфо"
 msgid "Show PiP"
 msgstr "Покажи PiP (слика во слика)"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Покажи процент на SNR наместо вредност dB"
 
 msgid "Show Script completed message"
