--- a/po/nn.po
+++ b/po/nn.po
@@ -1992,8 +1992,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Buss: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Som standard vil SNR (signalstyrke) vises i dB (desibel) hvis tuneren støtter dette. Med denne innstillingen vises SNR i prosent."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Hvis satt til Ja, vil alle steder der SNR i dB vises, vise SNR-prosenten og omvendt."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11933,7 +11933,7 @@ msgstr "Vis info"
 msgid "Show PiP"
 msgstr "Stoppe PiP (bilde i bilde)"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Vis SNR i prosent i stedenfor dB i verdi"
 
 msgid "Show Script completed message"
