--- a/po/pl.po
+++ b/po/pl.po
@@ -2144,8 +2144,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Domyślnie SNR jest wyświetlana w dB (jeśli wspierane przez tuner). To ustawienie wymusza wyświetlanie SNR w procentach."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Jeśli ustawione na Tak, we wszystkich miejscach, w których wyświetlany jest SNR w dB, będzie wyświetlana wartość procentowa SNR i odwrotnie."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12868,7 +12868,7 @@ msgstr "Pokaż info"
 msgid "Show PiP"
 msgstr "Pokaż EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "SNR w procentach zamiast dB"
 
 msgid "Show Script completed message"
