--- a/po/ro.po
+++ b/po/ro.po
@@ -1878,8 +1878,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Magistrala: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Dacă este setată la Da, toate locurile în care este afișat SNR în dB vor afișa procentul SNR și invers."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11190,7 +11190,7 @@ msgstr "Arata Informatii"
 msgid "Show PiP"
 msgstr "arata EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
