--- a/po/sl.po
+++ b/po/sl.po
@@ -2167,8 +2167,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Vodilo:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "V osnovi je SNR vrednost prikazana v dB (če je to podprto). Ta nastavitev pa omogoči, da se SNR vrednost prikazuje v odstotkih."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Če je nastavljeno na Da, bodo vsa mesta, kjer je prikazan SNR v dB, prikazala odstotek SNR in obratno."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12878,7 +12878,7 @@ msgstr "Prikaz informacij"
 msgid "Show PiP"
 msgstr "Prikaz EPG"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Prikaz SNR vrednosti signala v odstotkih, namesto v dB"
 
 msgid "Show Script completed message"
