--- a/po/sv.po
+++ b/po/sv.po
@@ -2083,11 +2083,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Som standard, kommer SNR att visas i dB (om det stöds av tunern). Denna inställning tvingar SNR att visas som en procentsats i stället."
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Om inställt på Ja, kommer alla platser där SNR i dB visas att visa SNR-procenten och vice versa."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -12562,7 +12562,7 @@ msgstr "Visa Info"
 msgid "Show PiP"
 msgstr "Visa EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Visa SNR procent istället för dB värde"
 
 msgid "Show Script completed message"
