--- a/po/th.po
+++ b/po/th.po
@@ -1882,8 +1882,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "หากตั้งค่าเป็นใช่ ทุกตำแหน่งที่แสดง SNR ในหน่วย dB จะแสดงเปอร์เซ็นต์ SNR และในทางกลับกัน"
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11228,7 +11228,7 @@ msgstr "แสดงข้อมูล"
 msgid "Show PiP"
 msgstr "แสดงผังรายการ (EPG)"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
