--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1712,11 +1712,11 @@ msgstr ""
 msgid "Bus: "
 msgstr ""
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "默认情况下,信号质量以dB显示（调谐器支持的情况下）.此设置将使信号不是已百分比来显示."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -10129,14 +10129,8 @@ msgstr ""
 msgid "Show PiP"
 msgstr ""
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "用百分比代替dB值来显示信号质量"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
