--- a/po/ar.po
+++ b/po/ar.po
@@ -2044,8 +2044,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "الناقل"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "إذا تم التعيين على نعم، فستعرض جميع الأماكن التي يتم فيها عرض نسبة الإشارة إلى الضوضاء (SNR) بالديسيبل نسبة نسبة الإشارة إلى الضوضاء (SNR) والعكس صحيح"
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11912,7 +11912,7 @@ msgstr "أظهر المعلومات"
 msgid "Show PiP"
 msgstr "إظهار دليل البرامج الالكترونى"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
