--- a/po/ca.po
+++ b/po/ca.po
@@ -2058,11 +2058,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Si s'estableix a Sí, tots els llocs on es mostra la SNR en dB mostraran el percentatge de SNR i viceversa."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -12433,14 +12433,8 @@ msgstr ""
 msgid "Show PiP"
 msgstr "mostrar EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Mostrar percentatge de SNR en lloc de valor de dB"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
