--- a/po/cs.po
+++ b/po/cs.po
@@ -2055,8 +2055,8 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Sběrnice: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Standardně ( jestliže to podporuje tuner) je SNR zobrazován v dB. Toto nastavení umožní zobrazování v procentech."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Pokud je nastaveno na Ano, na všech místech, kde je zobrazen SNR v dB, se zobrazí procento SNR a naopak."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12178,7 +12178,7 @@ msgstr "Zobrazit info"
 msgid "Show PiP"
 msgstr "Zobrazit PiP"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Zobrazovat SNR v procentech místo v dB"
 
 msgid "Show Script completed message"
