--- a/po/de.po
+++ b/po/de.po
@@ -1767,8 +1767,8 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Standardmässig wird SNR in Dezibel angezeigt (falls vom Tuner unterstützt). Diese Einstellung erzwingt die Darstellung von SNR in Prozent."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Wenn \"Ja\" eingestellt ist, wird überall, wo das SNR in dB angezeigt wird, der SNR-Prozentsatz angezeigt und umgekehrt."
 
 msgid "By teamblue Image Team"
 msgstr "Vom teamblue Image Team"
@@ -10335,14 +10335,8 @@ msgstr "Log zeigen"
 msgid "Show PiP"
 msgstr "PiP (Bild in Bild) anzeigen"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Zeige SNR Prozentsatz anstelle von dB-Wert"
-
-msgid "Show Script completed message"
-msgstr "Benachrichtige wenn Skripts fertig sind"
-
-msgid "Show Task's completed message"
-msgstr "Benachrichtige wenn Aufgaben fertig sind"
+msgid "Toggle the SNR values displayed"
+msgstr "SNR-Prozentsatz anstelle von dB-Wert anzeigen"
 
 msgid "Show True/False as graphical switch"
 msgstr "Zeige True / False als grafischen Schalter"
