--- a/po/es.po
+++ b/po/es.po
@@ -2134,8 +2134,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Por defecto, SNR en dB (cuando sintoniz. soporte). Esta configuración obligar a mostrar SNR en modo porcentaje."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Si se establece en Sí, todos los lugares donde se muestra la SNR en dB mostrarán el porcentaje de SNR y viceversa."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12810,14 +12810,8 @@ msgstr "Mostrar Registro"
 msgid "Show PiP"
 msgstr "Mostrar PIP"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Mostrar porcentaje SNR en lugar del valor dB"
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Mostrar el porcentaje de SNR en lugar del valor de dB"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
