--- a/po/fa.po
+++ b/po/fa.po
@@ -1886,8 +1886,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "گذرگاه:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "اگر روی Yes تنظیم شود، همه مکان هایی که SNR در دسی بل نمایش داده می شود، درصد SNR را نشان می دهند و بالعکس."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11334,14 +11334,8 @@ msgstr "نمایش اطلاعات"
 msgid "Show PiP"
 msgstr "توقف"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "نمایش درصد کیفیت سیگنال بجای مقدار دسی بل"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
