--- a/po/fr.po
+++ b/po/fr.po
@@ -1802,8 +1802,8 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Par défaut, le SNR sera affiché en dB (quand supporté par le tuner). Si activé, le SNR sera affiché en pourcentage."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "S'il est défini sur Oui, tous les endroits où le SNR en dB est affiché afficheront le pourcentage SNR et vice versa."
 
 msgid "By teamblue Image Team"
 msgstr "Par l'équipe image de teamblue"
@@ -10748,7 +10748,7 @@ msgstr "Afficher Log"
 msgid "Show PiP"
 msgstr "Montrer PiP"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Afficher SNR en pourcentage au lieu de la valeur dB"
 
 msgid "Show Script completed message"
