--- a/po/he.po
+++ b/po/he.po
@@ -1992,8 +1992,8 @@ msgstr ""
 msgid "Bus: "
 msgstr ""
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "אם מוגדר ככן, כל המקומות שבהם ה-SNR ב-dB מוצג יציגו את אחוז ה-SNR ולהיפך."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11841,7 +11841,7 @@ msgstr "הצג מידע"
 msgid "Show PiP"
 msgstr " הראה EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
