--- a/po/hr.po
+++ b/po/hr.po
@@ -2071,11 +2071,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ako je postavljeno na Da, sva mjesta gdje je prikazan SNR u dB prikazat će SNR postotak i obrnuto."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -12468,14 +12468,8 @@ msgstr ""
 msgid "Show PiP"
 msgstr "prikaži EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr ""
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Prikažite postotke SNR umjesto dB vrijednosti"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
