--- a/po/is.po
+++ b/po/is.po
@@ -2029,8 +2029,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Rás:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr ""
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ef stillt er á Já, munu allir staðir þar sem SNR í dB birtist sýna SNR prósentuna og öfugt."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12467,7 +12467,7 @@ msgstr "Sýna upplýsingar"
 msgid "Show PiP"
 msgstr "sýna EPG"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
