--- a/po/ku.po
+++ b/po/ku.po
@@ -1875,8 +1875,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ger li Erê were danîn, hemî cîhên ku SNR di dB de tê xuyang kirin dê sedî SNR nîşan bidin û berevajî."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11166,8 +11166,8 @@ msgstr "Show info"
 msgid "Show PiP"
 msgstr "Show EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
+msgstr "Toggle the SNR values displayed"
 
 msgid "Show Script completed message"
 msgstr ""
@@ -14769,7 +14769,7 @@ msgid "Yemen"
 msgstr "Movement"
 
 msgid "Yes"
-msgstr "Yes"
+msgstr \"Yes\"
 
 msgid "Yes (save index in setup tuner)"
 msgstr ""
