--- a/po/nb.po
+++ b/po/nb.po
@@ -2030,11 +2030,11 @@ msgstr ""
 msgid "Bus: "
 msgstr "Buss: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Som standard vil SNR (signalstyrke) vises i dB (desibel) hvis tuneren støtter dette. Velg nei for innstilling som viser SNR i prosent."
-
 msgid "By teamblue Image Team"
 msgstr ""
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Hvis satt til Ja, vil alle steder der SNR i dB vises, vise SNR-prosenten og omvendt."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -12244,14 +12244,8 @@ msgstr "Vis info"
 msgid "Show PiP"
 msgstr "Vis bilde i bilde"
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Vis SNR i dB verdi eller prosent"
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Vis SNR signalstyrke i prosent istedenfor dB verdi"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
