--- a/po/pt.po
+++ b/po/pt.po
@@ -2127,8 +2127,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Barramento: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Por defeito, o SNR será apresentado em dB (quando suportado pelo sintonizador). Esta definição força que o SNR seja apresentado em pontos percentuais."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Se definido para Sim, todos os locais onde o SNR em dB é apresentado apresentam a percentagem de SNR e vice-versa."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -12813,7 +12813,7 @@ msgstr "Mostrar informação"
 msgid "Show PiP"
 msgstr "Mostrar Guia de Programação..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Mostrar percentagem SNR em vez do valor dB"
 
 msgid "Show Script completed message"
