--- a/po/sk.po
+++ b/po/sk.po
@@ -1784,11 +1784,11 @@ msgstr "Burundi"
 msgid "Bus: "
 msgstr "Zbernica: "
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "Predvolene je SNR zobrazené v dB (ak je podporované tunerom). Toto nastavenie zmení zobrazenie SNR na percentá."
-
 msgid "By teamblue Image Team"
 msgstr "Podľa teamblue Image Team"
+
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Ak je nastavené na Áno, na všetkých miestach, kde sa zobrazuje SNR v dB, sa zobrazí percento SNR a naopak."
 
 msgid "Bypass HDMI EDID checking"
 msgstr "Vynechať kontrolu HDMI EDID"
@@ -10413,7 +10413,7 @@ msgstr "Zobraziť záznam"
 msgid "Show PiP"
 msgstr "Zobraziť PiP"
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr "Zobrazovať SNR v percentách namiesto hodnoty v dB"
 
 msgid "Show Script completed message"
