--- a/po/sr.po
+++ b/po/sr.po
@@ -2150,7 +2150,7 @@ msgstr ""
 msgid "Bus: "
 msgstr "Bus:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
 msgstr ""
 
 msgid "By teamblue Image Team"
@@ -12888,7 +12888,7 @@ msgstr "Prikaži info"
 msgid "Show PiP"
 msgstr "prikaži EPG..."
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
