--- a/po/uk.po
+++ b/po/uk.po
@@ -1886,8 +1886,8 @@ msgstr ""
 msgid "Bus: "
 msgstr "Шина:"
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
-msgstr "За замовчуванням, SNR показується в дБ (якщо підтримує тюнер). при включенні параметра SNR буде показуватися у відсотках."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
+msgstr "Якщо встановлено «Так», усі місця, де SNR відображається в дБ, відображатимуть відсоток SNR, і навпаки."
 
 msgid "By teamblue Image Team"
 msgstr ""
@@ -11227,14 +11227,8 @@ msgstr "Показати інфо"
 msgid "Show PiP"
 msgstr "Показати EPG..."
 
-msgid "Show SNR percentage instead of dB value"
-msgstr "Показати відсотки SNR замість значення dB в інфобарі"
-
-msgid "Show Script completed message"
-msgstr ""
-
-msgid "Show Task's completed message"
-msgstr ""
+msgid "Toggle the SNR values displayed"
+msgstr "Показати відсотки SNR замість значення дБ в інфобарі"
 
 msgid "Show True/False as graphical switch"
 msgstr ""
