--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -1707,7 +1707,7 @@ msgstr ""
 msgid "Bus: "
 msgstr ""
 
-msgid "By default, SNR will be shown in dB (when supported by the tuner). This setting forces SNR to be shown as a percentage instead."
+msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
 msgstr ""
 
 msgid "By teamblue Image Team"
@@ -10122,7 +10122,7 @@ msgstr ""
 msgid "Show PiP"
 msgstr ""
 
-msgid "Show SNR percentage instead of dB value"
+msgid "Toggle the SNR values displayed"
 msgstr ""
 
 msgid "Show Script completed message"
