[po] update all po files Thanks to @teamblue-e2

--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"POT-Creation-Date: 2024-08-13 12:25+0200\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -2060,9 +2060,6 @@ msgstr "Bus: "
 
 msgid "By teamblue Image Team"
 msgstr ""
-
-msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
-msgstr "Si s'estableix a Sí, tots els llocs on es mostra la SNR en dB mostraran el percentatge de SNR i viceversa."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -5029,7 +5026,7 @@ msgid ""
 "%s"
 msgstr ""
 
-msgid "Error when writing epg.dat on server"
+msgid "Error when writing epg.dat on the fallback receiver"
 msgstr ""
 
 msgid "Error while moving epg.dat to its destination"
@@ -8493,7 +8490,7 @@ msgstr ""
 msgid "No displayable files on this medium found!"
 msgstr ""
 
-msgid "No epg.dat file found server"
+msgid "No epg.dat file found on the fallback receiver"
 msgstr ""
 
 #
@@ -12433,8 +12430,11 @@ msgstr ""
 msgid "Show PiP"
 msgstr "mostrar EPG..."
 
-msgid "Toggle the SNR values displayed"
-msgstr "Mostrar percentatge de SNR en lloc de valor de dB"
+msgid "Show Script completed message"
+msgstr ""
+
+msgid "Show Task's completed message"
+msgstr ""
 
 msgid "Show True/False as graphical switch"
 msgstr ""
@@ -14352,6 +14352,9 @@ msgstr ""
 msgid "This allows you to show skin components in downloads"
 msgstr ""
 
+msgid "This allows you to show skinpacks in downloads"
+msgstr ""
+
 msgid "This allows you to show skins modules in downloads"
 msgstr ""
 
@@ -14814,6 +14817,9 @@ msgstr ""
 msgid "Toggle subtitles show/hide"
 msgstr ""
 
+msgid "Toggle the SNR values displayed"
+msgstr "Mostrar percentatge de SNR en lloc de valor de dB"
+
 #
 #, fuzzy
 msgid "Toggle videomode"
@@ -15201,6 +15207,11 @@ msgstr ""
 #
 #, fuzzy, python-format
 msgid "Unknown group: %d"
+msgstr "canal desconegut"
+
+#
+#, fuzzy
+msgid "Unknown image"
 msgstr "canal desconegut"
 
 #
@@ -16202,6 +16213,10 @@ msgstr ""
 
 msgid "When selected this allows video modes to be selected even if they are not reported as supported."
 msgstr ""
+
+#, fuzzy
+msgid "When set to 'Yes', all locations where SNR is displayed in dB's will show an SNR percentage, and vice versa."
+msgstr "Si s'estableix a Sí, tots els llocs on es mostra la SNR en dB mostraran el percentatge de SNR i viceversa."
 
 msgid "When the content has an aspect ratio of 16:9, choose whether to scale/stretch the picture."
 msgstr ""
@@ -17901,6 +17916,9 @@ msgid "simple"
 msgstr "senzill"
 
 msgid "skincomponents"
+msgstr ""
+
+msgid "skinpacks"
 msgstr ""
 
 msgid "skins"
