--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"POT-Creation-Date: 2024-08-13 12:25+0200\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -1841,9 +1841,6 @@ msgstr ""
 
 msgid "By teamblue Image Team"
 msgstr ""
-
-msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
-msgstr "Ако е зададено на Да, всички места, където SNR се показва в dB, ще показват SNR процент и обратно."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -4480,8 +4477,9 @@ msgid ""
 "%s"
 msgstr ""
 
-msgid "Error when writing epg.dat on server"
-msgstr ""
+#, fuzzy
+msgid "Error when writing epg.dat on the fallback receiver"
+msgstr "Грешка при получаване местоположението на файла epg.dat от сървъра"
 
 #, fuzzy
 msgid "Error while moving epg.dat to its destination"
@@ -7536,8 +7534,9 @@ msgstr "Няма налично описание."
 msgid "No displayable files on this medium found!"
 msgstr ""
 
-msgid "No epg.dat file found server"
-msgstr ""
+#, fuzzy
+msgid "No epg.dat file found on the fallback receiver"
+msgstr "Грешка при получаване местоположението на файла epg.dat от сървъра"
 
 msgid "No event info found, recording indefinitely."
 msgstr "Няма инфо за предаването, незабавен запис."
@@ -10939,8 +10938,11 @@ msgstr "Покажи Инфо"
 msgid "Show PiP"
 msgstr "Покажи Инфо"
 
-msgid "Toggle the SNR values displayed"
-msgstr "Показвай SNR в проценти вместо в dB"
+msgid "Show Script completed message"
+msgstr ""
+
+msgid "Show Task's completed message"
+msgstr ""
 
 msgid "Show True/False as graphical switch"
 msgstr ""
@@ -12628,6 +12630,9 @@ msgstr ""
 msgid "This allows you to show skin components in downloads"
 msgstr ""
 
+msgid "This allows you to show skinpacks in downloads"
+msgstr ""
+
 msgid "This allows you to show skins modules in downloads"
 msgstr ""
 
@@ -13047,6 +13052,9 @@ msgstr ""
 msgid "Toggle subtitles show/hide"
 msgstr ""
 
+msgid "Toggle the SNR values displayed"
+msgstr "Показвай SNR в проценти вместо в dB"
+
 #, fuzzy
 msgid "Toggle videomode"
 msgstr "Изберете видео режим"
@@ -13389,6 +13397,10 @@ msgstr ""
 
 #, fuzzy, python-format
 msgid "Unknown group: %d"
+msgstr "непознат канал"
+
+#, fuzzy
+msgid "Unknown image"
 msgstr "непознат канал"
 
 #, fuzzy, python-format
@@ -14297,6 +14309,10 @@ msgstr ""
 
 msgid "When selected this allows video modes to be selected even if they are not reported as supported."
 msgstr ""
+
+#, fuzzy
+msgid "When set to 'Yes', all locations where SNR is displayed in dB's will show an SNR percentage, and vice versa."
+msgstr "Ако е зададено на Да, всички места, където SNR се показва в dB, ще показват SNR процент и обратно."
 
 msgid "When the content has an aspect ratio of 16:9, choose whether to scale/stretch the picture."
 msgstr ""
@@ -15815,6 +15831,10 @@ msgstr "опростен"
 
 msgid "skincomponents"
 msgstr ""
+
+#, fuzzy
+msgid "skinpacks"
+msgstr "Кожи"
 
 #, fuzzy
 msgid "skins"
