--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"POT-Creation-Date: 2024-08-13 12:25+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -2119,9 +2119,6 @@ msgstr "Bus:"
 
 msgid "By teamblue Image Team"
 msgstr ""
-
-msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
-msgstr "Hvis indstillet til Ja, vil alle steder, hvor SNR i dB vises, vise SNR-procenten og omvendt."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -5197,7 +5194,7 @@ msgid ""
 "%s"
 msgstr ""
 
-msgid "Error when writing epg.dat on server"
+msgid "Error when writing epg.dat on the fallback receiver"
 msgstr ""
 
 msgid "Error while moving epg.dat to its destination"
@@ -8760,7 +8757,7 @@ msgstr "Ingen tilgængelig beskrivelse."
 msgid "No displayable files on this medium found!"
 msgstr "Der findes ingen visbare filer på dette medie!"
 
-msgid "No epg.dat file found server"
+msgid "No epg.dat file found on the fallback receiver"
 msgstr ""
 
 #
@@ -12832,8 +12829,11 @@ msgstr "Vis info"
 msgid "Show PiP"
 msgstr "vis EPG..."
 
-msgid "Toggle the SNR values displayed"
-msgstr "Vis SNR procent i stedet for dB værdi"
+msgid "Show Script completed message"
+msgstr ""
+
+msgid "Show Task's completed message"
+msgstr ""
 
 msgid "Show True/False as graphical switch"
 msgstr ""
@@ -14830,6 +14830,9 @@ msgstr ""
 msgid "This allows you to show skin components in downloads"
 msgstr ""
 
+msgid "This allows you to show skinpacks in downloads"
+msgstr ""
+
 msgid "This allows you to show skins modules in downloads"
 msgstr ""
 
@@ -15324,6 +15327,9 @@ msgstr ""
 msgid "Toggle subtitles show/hide"
 msgstr ""
 
+msgid "Toggle the SNR values displayed"
+msgstr "Vis SNR procent i stedet for dB værdi"
+
 #
 #, fuzzy
 msgid "Toggle videomode"
@@ -15721,6 +15727,10 @@ msgstr "Ukendt"
 #, fuzzy, python-format
 msgid "Unknown group: %d"
 msgstr "ukendt kanal"
+
+#, fuzzy
+msgid "Unknown image"
+msgstr "Ukendt"
 
 #
 #, fuzzy, python-format
@@ -16777,6 +16787,10 @@ msgstr ""
 
 msgid "When selected this allows video modes to be selected even if they are not reported as supported."
 msgstr ""
+
+#, fuzzy
+msgid "When set to 'Yes', all locations where SNR is displayed in dB's will show an SNR percentage, and vice versa."
+msgstr "Hvis indstillet til Ja, vil alle steder, hvor SNR i dB vises, vise SNR-procenten og omvendt."
 
 msgid "When the content has an aspect ratio of 16:9, choose whether to scale/stretch the picture."
 msgstr ""
@@ -18524,6 +18538,11 @@ msgstr "enkel"
 
 msgid "skincomponents"
 msgstr ""
+
+#
+#, fuzzy
+msgid "skinpacks"
+msgstr "Grafiske temaer"
 
 #
 #, fuzzy
