--- a/po/en.po
+++ b/po/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"POT-Creation-Date: 2024-08-13 12:25+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -1719,9 +1719,6 @@ msgstr ""
 
 msgid "By teamblue Image Team"
 msgstr ""
-
-msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
-msgstr "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -4198,7 +4195,7 @@ msgid ""
 "%s"
 msgstr ""
 
-msgid "Error when writing epg.dat on server"
+msgid "Error when writing epg.dat on the fallback receiver"
 msgstr ""
 
 msgid "Error while moving epg.dat to its destination"
@@ -7046,7 +7043,7 @@ msgstr ""
 msgid "No displayable files on this medium found!"
 msgstr ""
 
-msgid "No epg.dat file found server"
+msgid "No epg.dat file found on the fallback receiver"
 msgstr ""
 
 msgid "No event info found, recording indefinitely."
@@ -10157,8 +10154,11 @@ msgstr ""
 msgid "Show PiP"
 msgstr ""
 
-msgid "Toggle the SNR values displayed"
-msgstr "Toggle the SNR values displayed"
+msgid "Show Script completed message"
+msgstr ""
+
+msgid "Show Task's completed message"
+msgstr ""
 
 msgid "Show True/False as graphical switch"
 msgstr ""
@@ -11728,6 +11728,9 @@ msgstr ""
 msgid "This allows you to show skin components in downloads"
 msgstr ""
 
+msgid "This allows you to show skinpacks in downloads"
+msgstr ""
+
 msgid "This allows you to show skins modules in downloads"
 msgstr ""
 
@@ -12138,6 +12141,9 @@ msgstr ""
 msgid "Toggle subtitles show/hide"
 msgstr ""
 
+msgid "Toggle the SNR values displayed"
+msgstr "Toggle the SNR values displayed"
+
 msgid "Toggle videomode"
 msgstr ""
 
@@ -12456,6 +12462,9 @@ msgstr ""
 
 #, python-format
 msgid "Unknown group: %d"
+msgstr ""
+
+msgid "Unknown image"
 msgstr ""
 
 #, python-format
@@ -13330,6 +13339,10 @@ msgstr ""
 
 msgid "When selected this allows video modes to be selected even if they are not reported as supported."
 msgstr ""
+
+#, fuzzy
+msgid "When set to 'Yes', all locations where SNR is displayed in dB's will show an SNR percentage, and vice versa."
+msgstr "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
 
 msgid "When the content has an aspect ratio of 16:9, choose whether to scale/stretch the picture."
 msgstr ""
@@ -14779,6 +14792,9 @@ msgid "simple"
 msgstr ""
 
 msgid "skincomponents"
+msgstr ""
+
+msgid "skinpacks"
 msgstr ""
 
 msgid "skins"
