--- a/po/lt.po
+++ b/po/lt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"POT-Creation-Date: 2024-08-13 12:25+0200\n"
 "PO-Revision-Date: 2020-02-29 08:52+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -1887,9 +1887,6 @@ msgstr "Bus: "
 
 msgid "By teamblue Image Team"
 msgstr ""
-
-msgid "When set to 'Yes', all locations where SNR is displayed in dB will show an SNR percentage, and vice versa."
-msgstr "Jei nustatyta į Taip, visose vietose, kur rodomas SNR dB, bus rodomas SNR procentas ir atvirkščiai."
 
 msgid "Bypass HDMI EDID checking"
 msgstr ""
@@ -4610,8 +4607,11 @@ msgid ""
 "%s"
 msgstr ""
 
-msgid "Error when writing epg.dat on server"
+#, fuzzy
+msgid "Error when writing epg.dat on the fallback receiver"
 msgstr ""
+"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
+"%s"
 
 #, fuzzy
 msgid "Error while moving epg.dat to its destination"
@@ -7771,8 +7771,11 @@ msgstr "Joks apibūdinimas nepasiekiamas."
 msgid "No displayable files on this medium found!"
 msgstr "Jokių failų čia nerasta!"
 
-msgid "No epg.dat file found server"
+#, fuzzy
+msgid "No epg.dat file found on the fallback receiver"
 msgstr ""
+"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
+"%s"
 
 msgid "No event info found, recording indefinitely."
 msgstr "Informacija apie įvykius nerasta, tęsiamas įrašymas."
@@ -11285,8 +11288,11 @@ msgstr "Rodyti informaciją"
 msgid "Show PiP"
 msgstr "rodyti EPG..."
 
-msgid "Toggle the SNR values displayed"
-msgstr "Vietoje dB rodyti SNR procentus"
+msgid "Show Script completed message"
+msgstr ""
+
+msgid "Show Task's completed message"
+msgstr ""
 
 msgid "Show True/False as graphical switch"
 msgstr ""
@@ -13052,6 +13058,9 @@ msgstr ""
 msgid "This allows you to show skin components in downloads"
 msgstr ""
 
+msgid "This allows you to show skinpacks in downloads"
+msgstr ""
+
 msgid "This allows you to show skins modules in downloads"
 msgstr ""
 
@@ -13502,6 +13511,9 @@ msgstr ""
 msgid "Toggle subtitles show/hide"
 msgstr ""
 
+msgid "Toggle the SNR values displayed"
+msgstr "Vietoje dB rodyti SNR procentus"
+
 #, fuzzy
 msgid "Toggle videomode"
 msgstr "Išsirinkite vaizdo būdą"
@@ -13847,6 +13859,10 @@ msgstr "Nežinoma"
 #, fuzzy, python-format
 msgid "Unknown group: %d"
 msgstr "nežinomas kanalas"
+
+#, fuzzy
+msgid "Unknown image"
+msgstr "Nežinoma"
 
 #, fuzzy, python-format
 msgid "Unknown user: %d"
@@ -14791,6 +14807,10 @@ msgstr ""
 
 msgid "When selected this allows video modes to be selected even if they are not reported as supported."
 msgstr ""
+
+#, fuzzy
+msgid "When set to 'Yes', all locations where SNR is displayed in dB's will show an SNR percentage, and vice versa."
+msgstr "Jei nustatyta į Taip, visose vietose, kur rodomas SNR dB, bus rodomas SNR procentas ir atvirkščiai."
 
 msgid "When the content has an aspect ratio of 16:9, choose whether to scale/stretch the picture."
 msgstr ""
@@ -16328,6 +16348,10 @@ msgstr "paprastas"
 
 msgid "skincomponents"
 msgstr ""
+
+#, fuzzy
+msgid "skinpacks"
+msgstr "Temos"
 
 #, fuzzy
 msgid "skins"
